--- a/ITW2/index.html
+++ b/ITW2/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lora">
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Arizonia'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     <title>Romana</title>
 </head>
@@ -54,9 +56,6 @@
             <h1>
                 Welcome to my imaginary portfolio web
             </h1>
-            <!--<div class="head-text">
-                Creative developer
-            </div>-->
         </div>
     </div>
 
@@ -72,7 +71,7 @@
                         </span>
                     </h1>
                     <p class="sub-heading">
-                        I´m Bella UI Designer and Front End Developer.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                     </p>
                 </div>
         </div>
@@ -94,20 +93,25 @@
                             <h4>Brno University of Technology</h4>
                             <p>Faculty of Information Technology</p>
                         </div>
-                        <div class="about">blablablablablablabla</div>
+                        <div class="about">
+                            <img src="img/fit-logo.jpg" alt="fiit_logo">
+                        </div>
                     </li>
                     <li>
                         <div class="left-side">
                             <h3>2012 - 2016</h3>
-                            <h4>Brno University of Technology</h4>
-                            <p>Faculty of Information Technology</p>
+                            <h4>Slovak University of Technology in Bratislava</h4>
+                            <p>Faculty of Informatics and Information Technologies</p>
                         </div>
-                        <div class="about">blablablablablablabla</div>
+                        <div class="about">
+                            <img src="img/fiit-logo.jpg" alt="fiit_logo">
+                            <!--The Faculty was created in 2003 by separating from the Faculty of Electrical Engineering and Information Technology. It provides university education in computer science and computer engineering.-->
+                        </div>
                     </li>
                 </ul>
         </div>
     </section>
-
+<!--Faculty of Informatics and Information Technologies  of Technology in Bratislava-->
     <section id="section-experience">
         <div class="content">
             <div class="text-body">
@@ -119,28 +123,34 @@
             </div>
             <ul>
                 <li>
-                    <div class="left-side">
-                        <h3>2016 - 2020</h3>
-                        <h4>Brno University of Technology</h4>
-                        <p>Faculty of Information Technology</p>
+                    <div class="left-side small_h">
+                        <h3>september 2019 - present</h3>
+                        <h4>Web Developer</h4>
+                        <p>Solarwinds</p>
                     </div>
-                    <div class="about">blablablablablablabla</div>
+                    <div class="about">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </div>
                 </li>
                 <li>
-                    <div class="left-side">
-                        <h3>2012 - 2016</h3>
-                        <h4>Brno University of Technology</h4>
-                        <p>Faculty of Information Technology</p>
+                    <div class="left-side small_h">
+                        <h3>february 2018 - 2019</h3>
+                        <h4>Junior Web Designer</h4>
+                        <p>Solarwinds</p>
                     </div>
-                    <div class="about">blablablablablablabla</div>
+                    <div class="about">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </div>
                 </li>
                 <li>
-                    <div class="left-side">
-                        <h3>2016 - 2020</h3>
-                        <h4>Brno University of Technology</h4>
-                        <p>Faculty of Information Technology</p>
+                    <div class="left-side small_h">
+                        <h3>june 2016 - january 2018</h3>
+                        <h4>Backend Developer</h4>
+                        <p>ITjobs, s.r.o.</p>
                     </div>
-                    <div class="about">blablablablablablabla</div>
+                    <div class="about">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </div>
                 </li>
             </ul>
         </div>
@@ -158,19 +168,19 @@
             <div class="image-skills">
                 <ul>
                     <li>
-                        <img src="img/angular.jpg" alt="angular">
+                        <img src="img/angular.svg" alt="angular">
                     </li>
                     <li>
-                        <img src="img/css.jpg" alt="css">
+                        <img src="img/css.png" alt="css">
                     </li>
                     <li>
                         <img src="img/html.png" alt="html">
                     </li>
                     <li>
-                        <img src="img/js.jpg" alt="js">
+                        <img src="img/js.png" alt="js">
                     </li>
                     <li>
-                        <img src="img/react.jpg" alt="react">
+                        <img src="img/react.png" alt="react">
                     </li>
                 </ul>
             </div>
@@ -179,26 +189,47 @@
 
     <section id="section-interest">
         <div class="content">
-
                 <div class="text-body">
                     <h1>
                         <span>
                             Interest
                         </span>
                     </h1>
-                    <p class="sub-heading">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
                 </div>
+            <ul>
+                <li>
+                    <div class="left-side">
+                        <h3>Books</h3>
+                        <p>Solarwinds</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="left-side">
+                        <h3>Sports</h3>
+                        <p>Solarwinds</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="left-side">
+                        <h3>Art</h3>
+                        <p>ITjobs, s.r.o.</p>
+                    </div>
+                </li>
+            </ul>
         </div>
     </section>
 
 <footer id="footer">
-    <div>
-        <p>&copy; 2017 Instant. All Rights Reserved. Designed by <a href="https://uicookies.com/">uiCookies</a></p>
-    </div>
+    <!--<a href="#" class="fa fa-facebook"></a>-->
+    <a href="#">
+        <i class="fa fa-facebook"></i>
+    </a>
+    <a href="#" class="fa fa-google"></a>
+    <a href="#" class="fa fa-linkedin"></a>
+    <a href="#" class="fa fa-instagram"></a>
 </footer>
 
     <script src ="script.js" type="text/javascript"> </script>
+
 </body>
 </html>
