--- a/ITW2/index.html
+++ b/ITW2/index.html
@@ -5,59 +5,64 @@
     <meta name="author" content="Romana Džubarová">
 
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lora">
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Arizonia'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-    <title>Romana</title>
+    <title>Bella - The Imaginative</title>
 </head>
 <body>
-        <nav class="navbar">
-            <div class="navbar-nav">
-                <h1 class="logo">
-                    <a href="index.html">
-                        Bella
-                    </a>
-                </h1>
-                <ul>
-                    <li>
-                        <a href="#section-about">
-                            About
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#section-education">
-                            Education
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#section-experience">
-                            Experience
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#section-skills">
-                            Skills
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#section-interest">
-                            Interest
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    <div class="content">
-        <div id="welcome-text">
-            <h1>
-                Welcome to my imaginary portfolio web
+    <nav class="navbar">
+        <div class="navbar-nav">
+            <h1 class="logo">
+                <a href="index.html">
+                    Bella
+                </a>
             </h1>
+            <div class="toggle">
+                <div class="bars"><i class="fas fa-bars" aria-hidden="true"></i></div>
+            </div>
+            <ul>
+                <li>
+                    <a href="#section-about">
+                        About
+                    </a>
+                </li>
+                <li>
+                    <a href="#section-education">
+                        Education
+                    </a>
+                </li>
+                <li>
+                    <a href="#section-experience">
+                        Experience
+                    </a>
+                </li>
+                <li>
+                    <a href="#section-skills">
+                        Skills
+                    </a>
+                </li>
+                <li>
+                    <a href="#section-interest">
+                        Interest
+                    </a>
+                </li>
+            </ul>
         </div>
-    </div>
+    </nav>
+    <section id="section-welcome">
+        <div class="content">
+            <div class="welcome-text">
+                <h1>
+                    Welcome to my imaginary portfolio web
+                </h1>
+            </div>
+        </div>
+    </section>
+
 
     <section id="section-about">
         <div class="content">
@@ -70,10 +75,10 @@
                             About me
                         </span>
                     </h1>
-                    <p class="sub-heading">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    </p>
                 </div>
+                <p class="sub-heading">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
         </div>
     </section>
 
@@ -105,13 +110,11 @@
                         </div>
                         <div class="about">
                             <img src="img/fiit-logo.jpg" alt="fiit_logo">
-                            <!--The Faculty was created in 2003 by separating from the Faculty of Electrical Engineering and Information Technology. It provides university education in computer science and computer engineering.-->
                         </div>
                     </li>
                 </ul>
         </div>
     </section>
-<!--Faculty of Informatics and Information Technologies  of Technology in Bratislava-->
     <section id="section-experience">
         <div class="content">
             <div class="text-body">
@@ -189,30 +192,47 @@
 
     <section id="section-interest">
         <div class="content">
-                <div class="text-body">
-                    <h1>
-                        <span>
-                            Interest
-                        </span>
-                    </h1>
-                </div>
+            <div class="text-body">
+                <h1>
+                    <span>
+                        Interest
+                    </span>
+                </h1>
+            </div>
             <ul>
                 <li>
-                    <div class="left-side">
+                    <div class="inter">
                         <h3>Books</h3>
-                        <p>Solarwinds</p>
+                        <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>-->
+                        <ul>
+                            <li>fantasy</li>
+                            <li>sci-fi</li>
+                            <li>novel</li>
+                            <li>detective</li>
+                        </ul>
                     </div>
                 </li>
                 <li>
-                    <div class="left-side">
+                    <div class="inter">
                         <h3>Sports</h3>
-                        <p>Solarwinds</p>
+                        <ul>
+                            <li>running</li>
+                            <li>swimming</li>
+                            <li>volleyball</li>
+                            <li>basketball</li>
+                            <li>rollerblading</li>
+                        </ul>
                     </div>
                 </li>
                 <li>
-                    <div class="left-side">
-                        <h3>Art</h3>
-                        <p>ITjobs, s.r.o.</p>
+                    <div class="inter">
+                        <h3>Arts</h3>
+                        <p>I like to visit </p>
+                        <ul>
+                            <li>gallery</li>
+                            <li>theatre</li>
+                            <li>cinema</li>
+                        </ul>
                     </div>
                 </li>
             </ul>
@@ -221,15 +241,16 @@
 
 <footer id="footer">
     <!--<a href="#" class="fa fa-facebook"></a>-->
-    <a href="#">
-        <i class="fa fa-facebook"></i>
-    </a>
-    <a href="#" class="fa fa-google"></a>
-    <a href="#" class="fa fa-linkedin"></a>
-    <a href="#" class="fa fa-instagram"></a>
+    <div class="fab">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-google"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-instagram"></a>
+    </div>
 </footer>
 
-    <script src ="script.js" type="text/javascript"> </script>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <script src ="script.js"  type="text/javascript"></script>
 
 </body>
 </html>
